syntax = "proto3";

option go_package = "url-shortener/internal/pkg/proto";

service URLShortenerService {
    rpc CreateURL(CreateURLRequest) returns (CreateURLResponse);
    rpc GetURL(GetURLRequest) returns (GetURLResponse);
}

message CreateURLRequest {
    string Url = 1;
}

message CreateURLResponse {
    string Key = 1;
}

message GetURLRequest {
    string Key = 1;
}

message GetURLResponse {
    string Url = 1;
}